<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drinks_list">DrinksListActivity</string>
    <string name="title_activity_drink_list">DrinkListActivity</string>
    <string name="title_drink_list">Drinks</string>
    <string name="title_drink_detail">Drink Detail</string>

    <string name="TypeComments">Type Comments Here</string>
    <string name="DrinkComments">Drink Comments</string>
    <string name="ratingValue">0.0</string>

    <string name="title_activity_type_list">TypeList</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="title_activity_add_beer">AddBeerActivity</string>

    <string name="new_beer_desc">Description</string>
    <string name="new_beer_abv">ABV %</string>
    <string name="new_beer_name">Beer Brand and Name</string>
    <string name="new_beer_title">Add New Beer</string>
    <string name="add_beer_btn">ADD BEER</string>
    <string name="cal">Calories:</string>
    <string name="calHint">Calories</string>

    <string name="beer_name">Beer Name:</string>
    <string name="beer_desc">Beer Description:</string>
    <string name="beer_abv">Beer ABV:</string>
    <string name="beer_type">Beer Type:</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="submit">Submit</string>
    <string name="notMember">Don\'t have an account? Sign up and drink up!</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email: </string>
    <string name="emailHint">Email Address</string>
    <string name="retype_password">Retype Password: </string>
    <string name="username_hint">Type Username</string>
    <string name="password_hint">Type Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="commentHint">Type Comment Here</string>
    <string name="descriptionTitle">Description</string>

    <string name="drawer_open">Rate My Drink</string>
    <string name="drawer_close">Menu</string>

    <string-array name="beers">
        <item>Lager</item>
        <item>IPA</item>
        <item>Saison</item>
        <item>Imperial</item>
        <item>Stout</item>
        <item>Ale</item>
        <item>Pale Ale</item>
        <item>Lambic</item>
        <item>Belgian</item>
        <item>Hefeweizen</item>
        <item>Pilsner</item>
        <item>Kristalweizen</item>
        <item>Helles</item>
        <item>Marzen</item>
        <item>Porter</item>
        <item>Malt</item>
        <item>Weisbier</item>
        <item>Cider</item>
    </string-array>

    <string-array name="liquors">
        <item>Rum</item>
        <item>Whiskey</item>
        <item>Vodka</item>
        <item>Absinthe</item>
        <item>Brandy</item>
        <item>Gin</item>
        <item>Tequila</item>
        <item>Bourbon</item>
        <item>Scotch</item>
        <item>Cognac</item>
        <item> </item>
    </string-array>

    <string-array name="navItems">
        <item>Login</item>
        <item>Add Beer</item>
        <item>Add Liquor</item>
        <item>Add Mixed Drink</item>
        <item>Main Menu</item>
        <item>Profile</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_add_liquor">AddLiquorActivity</string>
    <string name="liquor_name">Add New Liquor</string>
    <string name="liquor_type">Liquor Type:</string>
    <string name="liquor_desc">Liquor Description:</string>
    <string name="new_liquor_name">Liquor Brand and Name</string>
    <string name="new_liq_desc">Description</string>
    <string name="liquor_abv">Liquor ABV:</string>
    <string name="new_liquor_abv">ABV %</string>
    <string name="add_liq_btn">ADD LIQUOR</string>
    <string name="new_liquor_title">Add New Liquor</string>

    <string name="add_mixed_drink">Add Mixed Drink</string>
    <string name="mDrink_name">Drink Name:</string>
    <string name="drink_name_hint">Name of Drink</string>
    <string name="ingredient">Ingredients</string>
    <string name="quantityOz">Quantity</string>
    <string name="Oz">Oz</string>
    <string name="IngredHint">Ingredient</string>
    <string name="add_Drink">Add Mixed Drink</string>
    <string name="title_activity_add_mixed_drink">AddMixedDrinkActivity</string>
    <string name="mixed_drink_description">Description:</string>
    <string name="md_description_hint">Drink Description</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <string name="ProfileTab1">Profile Info</string>
    <string name="ProfileTab2">Favorites</string>
    <string name="ProfileTab3">Comments</string>

    <string name="account_name">Username: </string>
    <string name="num_posted_drinks">Total Drinks: </string>
    <string name="num_comments">Total Comments: </string>
    <string name="num_favorites">Total Favorites: </string>
    <string name="date_joined">Date Joined: </string>


    <!-- TODO: Remove or change this when database comments/favs are implemented -->

    <string-array name="tempComments">
        <item>Such beer, much alcohol, wow</item>
        <item>This liquor will put hair on your chest</item>
        <item>The ABV in this must be over 9000</item>
        <item>Bleij hausfuf aspuia berr</item>
        <item>This natty tastes like piss</item>
        <item>I do say, this beer is astonishing</item>
        <item>Testing scrollability1</item>
        <item>Testing scrollability2</item>
        <item>Testing scrollability3</item>
        <item>Testing scrollability4</item>
        <item>Testing scrollability5</item>
        <item>Testing scrollability6</item>
        <item>Testing scrollability7</item>
        <item>Testing scrollability8</item>
        <item>Testing scrollability9</item>
        <item>Testing scrollability10</item>
        <item>Testing scrollability11</item>

    </string-array>

    <string-array name="tempFavs">
        <item>Captain Morgan Private Stock</item>
        <item>Grey Goose</item>
        <item>Hofbrahaus Munich</item>
        <item>Fireball</item>
        <item>Jack Daniels Tennessee Honey Whiskey</item>
        <item>Trashcan</item>
        <item>Testing scrollability1</item>
        <item>Testing scrollability2</item>
        <item>Testing scrollability3</item>
        <item>Testing scrollability4</item>
        <item>Testing scrollability5</item>
        <item>Testing scrollability6</item>
        <item>Testing scrollability7</item>
        <item>Testing scrollability8</item>
        <item>Testing scrollability9</item>
        <item>Testing scrollability10</item>
        <item>Testing scrollability11</item>
    </string-array>

</resources>
