<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs.ycp.edu.cs481.ratemydrink.activities.AddLiquorActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_liquor_title"
        android:id="@+id/AddLiquorTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liquor_name"
        android:id="@+id/AddLiquorName"
        android:layout_below="@+id/AddLiquorTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liquor_type"
        android:id="@+id/AddLiquorType"
        android:layout_below="@+id/AddLiquorName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liquor_desc"
        android:id="@+id/AddLiquorDesc"
        android:layout_below="@+id/AddLiquorType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_liquor_field"
        android:hint="@string/new_liquor_name"
        android:layout_alignTop="@+id/AddLiquorName"
        android:layout_toRightOf="@+id/AddLiquorName"
        android:layout_toEndOf="@+id/AddLiquorName"
        android:layout_marginTop="-3dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_liquor_spinner"
        android:entries="@array/liquors"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/AddLiquorType"
        android:layout_toRightOf="@+id/AddLiquorType"
        android:layout_toEndOf="@+id/AddLiquorType" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_liq_desc_field"
        android:layout_below="@+id/AddLiquorType"
        android:layout_toRightOf="@+id/AddLiquorDesc"
        android:layout_marginTop="22dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/new_liq_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liquor_abv"
        android:id="@+id/AddLiquorABV"
        android:layout_below="@+id/add_liq_desc_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/add_liq_abv_field"
        android:hint="@string/new_liquor_abv"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/AddLiquorABV"
        android:layout_alignLeft="@+id/new_liquor_spinner"
        android:layout_alignStart="@+id/new_liquor_spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_liq_btn"
        android:id="@+id/add_liquor"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false" />

</RelativeLayout>
