<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs.ycp.edu.cs481.ratemydrink.activities.AddBeerActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_beer_title"
        android:id="@+id/AddBeerTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beer_name"
        android:id="@+id/AddBeerName"
        android:layout_below="@+id/AddBeerTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beer_type"
        android:id="@+id/AddBeerType"
        android:layout_below="@+id/AddBeerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beer_desc"
        android:id="@+id/AddBeerDesc"
        android:layout_below="@+id/AddBeerType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_beer_field"
        android:hint="@string/new_beer_name"
        android:layout_alignTop="@+id/AddBeerName"
        android:layout_toRightOf="@+id/AddBeerName"
        android:layout_toEndOf="@+id/AddBeerName"
        android:layout_marginTop="-3dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_beer_spinner"
        android:entries="@array/beers"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/AddBeerType"
        android:layout_toRightOf="@+id/AddBeerType"
        android:layout_toEndOf="@+id/AddBeerType" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_beer_desc_field"
        android:layout_below="@+id/AddBeerType"
        android:layout_toRightOf="@+id/AddBeerDesc"
        android:layout_marginTop="22dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/new_beer_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beer_abv"
        android:id="@+id/AddBeerABV"
        android:layout_below="@+id/add_beer_desc_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/add_beer_abv_field"
        android:layout_alignTop="@+id/AddBeerABV"
        android:layout_alignLeft="@+id/AddBeerTitle"
        android:layout_alignStart="@+id/AddBeerTitle"
        android:hint="@string/new_beer_abv"
        android:layout_marginLeft="-20dp"
        android:layout_marginTop="-5dp"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_beer_btn"
        android:id="@+id/add_beer"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/add_beer_abv_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp" />

</RelativeLayout>
